--- a/Seeds.html
+++ b/Seeds.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seeds</title>
     <link rel="stylesheet" href="css/page.css">
+    <link rel="stylesheet" href="css/table.css">
 </head>
 <body>
     <div class="content">
