--- a/transformations.html
+++ b/transformations.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Transformations</title>
     <link rel="stylesheet" href="css/page.css">
+    <link rel="stylesheet" href="css/table.css">
+    
 </head>
 <body>
   <div class="content">
