--- a/endings.html
+++ b/endings.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Endings</title>
+    <script src="js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/page.css">
 </head>
 <body>
-    <div class="content">
+    <div class="container">
         <header class="logo">
             <a href="index.html">
                 <img src="img/IsaacLogo.webp" alt="The Binding of Isaac:Rebirth Wiki">
@@ -157,13 +159,143 @@
                 <p>After defeating The Beast, the sky cracks open as a beam of light smites the monster, sending it sinking into the lake of lava. Isaac then ascends into the beam, as recollections of past events play back; his Mom mourning her son's death, his Mom and Dad arguing, his Dad leaving without saying goodbye, his Dad stealing money from Mom's purse while she sleeps, and the restless nights Isaac endured overhearing his parents arguing, believing he was the cause. He then feels his fear and worries fall from his being, his ascent growing faster while ??? and The Lost fall from him. He sees his only companion, Guppy, his Mom and Dad loving each other, his Mother kissing him on the head as he falls asleep, and his own birth. Then, Isaac sees nothing.</p>
                 <p>Isaac's Dad interjects, asking Isaac if he really wants the story to end like this and telling him that since he's the one writing it, it doesn't have to end this way. Isaac's Dad asks Isaac if he wants to make a new ending to the story — perhaps even a happy one. Isaac says okay, and his father begins the opening narration again, but with Isaac living with both of his parents instead of just his mother, as the screen fades to black and the credits appear.</p>
             </section>
+
+            <section>
+                <h2>Gallery</h2>
+                <div id="galleryCarousel" class="carousel slide">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="img/Endings/1_Eden.webp" class="d-block w-100" alt="" title="">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="">Ending 1</h5>
+                                <p class=""><a href="#">Eden</a> in ending 1</p>
+                              </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/Endings/2_Rubber_Cement.webp" class="d-block w-100" alt="" title="">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="">Ending 2</h5>
+                                <p class=""><a href="#">Rubber Cement</a> Unlocked</p>
+                              </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/Endings/2_Rubber_Cement_2.webp" class="d-block w-100" alt="" title="">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="">Ending 2</h5>
+                                <p class=""><a href="#">Isaac</a> using <a href="#">Rubber Cement</a></p>
+                              </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/Endings/3_Transcendence.webp" class="d-block w-100" alt="" title="">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="">Ending 3</h5>
+                                <p class=""><a href="#">Transcendence</a> Unlocked</p>
+                              </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/Endings/3_Transcendence_2.webp" class="d-block w-100" alt="" title="">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="">Ending 3</h5>
+                                <p class=""><a href="#">Isaac</a> using <a href="#">Transcendence</a></p>
+                              </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/Endings/4_Wire_Coat_Hanger.webp" class="d-block w-100" alt="" title="">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="">Ending 4</h5>
+                                <p class=""><a href="#">Wire Coat Hanger</a> Unlocked</p>
+                              </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/Endings/4_Wire_Coat_Hanger_2.webp" class="d-block w-100" alt="" title="">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="">Ending 4</h5>
+                                <p class=""><a href="#">Isaac</a> using <a href="#">Wire Coat Hanger</a></p>
+                              </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/Endings/5_Mom.webp" class="d-block w-100" alt="" title="">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="">Ending 5</h5>
+                                <p class="">A mom's hand grabbing <a href="#">Isaac</a></p>
+                              </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/Endings/6_Ipecac.webp" class="d-block w-100" alt="" title="">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="">Ending 6</h5>
+                                <p class=""><a href="#">Ipecac</a> is unlocked and used by <a href="#">Isaac</a></p>
+                              </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/Endings/7_Experimental_Treatment.webp" class="d-block w-100" alt="" title="">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="">Ending 7</h5>
+                                <p class=""><a href="#">Experemental Treatment</a> Unlocked</p>
+                              </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/Endings/7_Experimental_Treatment_2.webp" class="d-block w-100" alt="" title="">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="">Ending 7</h5>
+                                <p class=""><a href="#">Isaac</a> using <a href="#">Experemental Treatment</a></p>
+                              </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/Endings/8_Quarter.webp" class="d-block w-100" alt="" title="">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="">Ending 8</h5>
+                                <p class=""><a href="#">A Quarter</a> Unlocked</p>
+                              </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/Endings/9_Dr._Fetus.webp" class="d-block w-100" alt="" title="">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="">Ending 9</h5>
+                                <p class=""><a href="#">Dr. Fetus</a> Unlocked</p>
+                              </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/Endings/9_Dr._Fetus_2.webp" class="d-block w-100" alt="" title="">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="">Ending 9</h5>
+                                <p class=""><a href="#">Isaac</a> using <a href="#">Dr. Fetus</a></p>
+                              </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/Endings/10_Blue_Baby.webp" class="d-block w-100" alt="" title="">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="">Ending 10</h5>
+                                <p class=""><a href="#">???(Blue Baby)</a> in chest</p>
+                              </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/Endings/11_It_Lives.webp" class="d-block w-100" alt="" title="">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="">Ending 11</h5>
+                                <p class=""><a href="#">Mom's heart</a> changed to <a href="#">It Lives</a></p>
+                              </div>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#galleryCarousel" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#galleryCarousel" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                      </button>
+                </div>
+            </section>
         </main>
     </div>
-    <footer>
-        Made by: <br>
+    <footer class="footer">
+        <div class="container">
+            <span>Made by: <br>
         Maxim Kolodin <br>
         Alimzhan Zhaparov <br>
-        Askar Toraliyev
+        Askar Toraliyev</span>
+        </div>
     </footer>
 </body>
 </html>
