--- a/Seeds.html
+++ b/Seeds.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seeds</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/page.css">
     <link rel="stylesheet" href="css/table.css">
 </head>
 <body>
-    <div class="content">
+    <div class="container">
         <header class="logo">
             <a href="index.html">
                 <img src="img/IsaacLogo.webp" alt="The Binding of Isaac:Rebirth Wiki">
@@ -742,11 +743,13 @@
             </section>
         </main>
     </div>
-    <footer>
-    Made by: <br>
-    Maxim Kolodin <br>
-    Alimzhan Zhaparov <br>
-    Askar Toraliyev
+    <footer class="footer">
+        <div class="container">
+            <span>Made by: <br>
+        Maxim Kolodin <br>
+        Alimzhan Zhaparov <br>
+        Askar Toraliyev</span>
+        </div>
     </footer>
 
 </body>
