--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Binding of Isaac:Rebirth Wiki</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/page.css">
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <div class="content">
+    <div class="container">
         <header class="logo">
             <a href="index.html">
                 <img src="img/IsaacLogo.webp" alt="The Binding of Isaac:Rebirth Wiki">
@@ -19,184 +20,190 @@
             <h1>WELCOME TO THE BINDING OF ISAAC:REBIRTH WIKI</h1>
             <section>
                 <h2>CONTENT</h2>
-                <ul class="gallery">
-                    <li class="gallerybox">
+                <div class="row justify-content-around">
+                    <div class="gallerybox col-lg-1 col-sm-3">
                         <div class="galleryimage">
                             <a href="#">
                                 <img src="img/MainPage/Achievements.webp" alt="Achivements" width="100" height="87">
                             </a>
                         </div>
                         <p class="gallerytext"><a href="#">Achivements(TODO)</a></p>
-                    </li>
-                    <li class="gallerybox">
+                    </div>
+                    <div class=" gallerybox col-lg-1 col-sm-3">
                         <div class="galleryimage">
                             <a href="#">
                                 <img src="img/MainPage/Challenges.webp" alt="Challenges" width="80" height="100">
                             </a>
                         </div>
                         <p class="gallerytext"><a href="#">Challenges(TODO)</a></p>
-                    </li>
-                    <li class="gallerybox">
+                    </div>
+                    <div class="gallerybox col-lg-1 col-sm-3">
                         <div class="galleryimage">
                             <a href="#">
                                 <img src="img/MainPage/CompletionsMarks.webp" alt="Completion Marks" width="100" height="100">
                             </a>
                         </div>
                         <p class="gallerytext"><a href="#">Completion Marks(TODO)</a></p>
-                    </li>
-                    <li class="gallerybox">
+                    </div>
+                    <div class="gallerybox col-lg-1 col-sm-3">
                         <div class="galleryimage">
                             <a href="#">
                                 <img src="img/MainPage/Items.webp" alt="Items" width="60" height="100">
                             </a>
                         </div>
                         <p class="gallerytext"><a href="#">Items(TODO)</a></p>
-                    </li>
-                    <li class="gallerybox">
+                    </div>
+                    <div class="gallerybox col-lg-1 col-sm-3">
                         <div class="galleryimage">
                             <a href="#">
                                 <img src="img/Trinkets/The_Left_Hand_icon.webp" alt="Trinkets" width="100" height="100">
                             </a>
                         </div>
                         <p class="gallerytext"><a href="#">Trinkets(TODO)</a></p>
-                    </li>
-                    <li class="gallerybox">
+                    </div>
+                    <div class="gallerybox col-lg-1 col-sm-3">
                         <div class="galleryimage">
                             <a href="#">
                                 <img src="img/Characters/Isaac_appearance.webp" alt="Characters" width="85" height="100">
                             </a>
                         </div>
                         <p class="gallerytext"><a href="#">Characters(TODO)</a></p>
-                    </li>
-                    <li class="gallerybox">
+                    </div>
+                    <div class="gallerybox col-lg-1 col-sm-3">
                         <div class="galleryimage">
                             <a href="./chapters.html">
                                 <img src="img/MainPage/Chapters.webp" alt="Chapters" width="100" height="76">
                             </a>
                         </div>
                         <p class="gallerytext"><a href="./chapters.html">Chapters</a></p>
-                    </li>
-                    <li class="gallerybox">
+                    </div>
+                    <div class="gallerybox col-lg-1 col-sm-3">
                         <div class="galleryimage">
                             <a href="#">
                                 <img src="img/MainPage/Rooms.webp" alt="Rooms" width="100" height="78">
                             </a>
                         </div>
                         <p class="gallerytext"><a href="#">Rooms(TODO)</a></p>
-                    </li>
-                    <li class="gallerybox">
+                    </div>
+                    <div class="gallerybox col-lg-1 col-sm-3">
                         <div class="galleryimage">
                             <a href="./transformations.html">
                                 <img src="img/Transformations/Guppy_appearance.webp" alt="Transformations" width="86" height="100">
                             </a>
                         </div>
                         <p class="gallerytext"><a href="./transformations.html">Transformations</a></p>
-                    </li>
-                    <li class="gallerybox">
+                    </div>
+
+                    <div class="w-100 d-none d-xxl-block"></div>
+
+                    <div class="gallerybox col-lg-1 col-sm-3">
                         <div class="galleryimage">
                             <a href="#">
                                 <img src="img/MainPage/Attr.webp" alt="Attributes" width="100" height="100">
                             </a>
                         </div>
                         <p class="gallerytext"><a href="#">Attributes(TODO)</a></p>
-                    </li>
-                    <li class="gallerybox">
+                    </div>
+                    <div class="gallerybox col-lg-1 col-sm-3">
                         <div class="galleryimage">
                             <a href="#">
                                 <img src="img/MainPage/Bosses.webp" alt="Bosses" width="100" height="86">
                             </a>
                         </div>
                         <p class="gallerytext"><a href="#">Bosses(TODO)</a></p>
-                    </li>
-                    <li class="gallerybox">
+                    </div>
+                    <div class="gallerybox col-lg-1 col-sm-3">
                         <div class="galleryimage">
                             <a href="#">
                                 <img src="img/MainPage/Monsters.webp" alt="Monsters" width="80" height="100">
                             </a>
                         </div>
                         <p class="gallerytext"><a href="#">Monsters(TODO)</a></p>
-                    </li>
-                    <li class="gallerybox">
+                    </div>
+                    <div class="gallerybox col-lg-1 col-sm-3">
                         <div class="galleryimage">
                             <a href="#">
                                 <img src="img/MainPage/Pickups.webp" alt="Pickups" width="100" height="100">
                             </a>
                         </div>
                         <p class="gallerytext"><a href="#">Pickups(TODO)</a></p>
-                    </li>
-                    <li class="gallerybox">
+                    </div>
+                    <div class="gallerybox col-lg-1 col-sm-3">
                         <div class="galleryimage">
                             <a href="#">
                                 <img src="img/Greed_Donation_Machine.webp" alt="Modes" width="91" height="100">
                             </a>
                         </div>
                         <p class="gallerytext"><a href="#">Modes(TODO)</a></p>
-                    </li>
-                    <li class="gallerybox">
+                    </div>
+                    <div class="gallerybox col-lg-1 col-sm-3">
                         <div class="galleryimage">
                             <a href="#">
                                 <img src="img/MainPage/Objects.webp" alt="Objects" width="100" height="92">
                             </a>
                         </div>
                         <p class="gallerytext"><a href="#">Objects(TODO)</a></p>
-                    </li>
-                    <li class="gallerybox">
+                    </div>
+                    <div class="gallerybox col-lg-1 col-sm-3">
                         <div class="galleryimage">
                             <a href="#">
                                 <img src="img/Effects/Confusion_Effect.webp" alt="Effects" width="81" height="100">
                             </a>
                         </div>
                         <p class="gallerytext"><a href="#">Effects(TODO)</a></p>
-                    </li>
-                    <li class="gallerybox">
+                    </div>
+                    <div class="gallerybox col-lg-1 col-sm-3">
                         <div class="galleryimage">
                             <a href="./Curses.html">
                                 <img src="img/MainPage/Curse.webp" alt="Curses" width="100" height="100">
                             </a>
                         </div>
                         <p class="gallerytext"><a href="./Curses.html">Curses</a></p>
-                    </li>
-                    <li class="gallerybox">
+                    </div>
+                    <div class="gallerybox col-lg-1 col-sm-3">
                         <div class="galleryimage">
                             <a href="./Seeds.html">
                                 <img src="img/MainPage/Seeds.webp" alt="Seeds" width="100" height="100">
                             </a>
                         </div>
                         <p class="gallerytext"><a href="./Seeds.html">Seeds</a></p>
-                    </li>
-                    <li class="gallerybox">
+                    </div>
+
+                    <div class="w-100 d-none d-xxl-block"></div>
+
+                    <div class="gallerybox col-lg-1 col-sm-3">
                         <div class="galleryimage">
                             <a href="./endings.html">
                                 <img src="img/MainPage/Endings.webp" alt="Endings" width="100" height="100">
                             </a>
                         </div>
                         <p class="gallerytext"><a href="./endings.html">Endings</a></p>
-                    </li>
-                    <li class="gallerybox">
+                    </div>
+                    <div class="gallerybox col-lg-1 col-sm-3">
                         <div class="galleryimage">
                             <a href="#">
                                 <img src="img/Trinkets/Forgotten_Lullaby_icon.webp" alt="Music" width="100" height="100">
                             </a>
                         </div>
                         <p class="gallerytext"><a href="#">Music(TODO)</a></p>
-                    </li>
-                    <li class="gallerybox">
+                    </div>
+                    <div class="gallerybox col-lg-1 col-sm-3">
                         <div class="galleryimage">
                             <a href="#">
                                 <img src="img/Collectibles/The_Hourglass_icon.webp" alt="Version History" width="100" height="100">
                             </a>
                         </div>
                         <p class="gallerytext"><a href="#">Version History(TODO)</a></p>
-                    </li>
-                    <li class="gallerybox">
+                    </div>
+                    <div class="gallerybox col-lg-1 col-sm-3">
                         <div class="galleryimage">
                             <a href="#">
                                 <img src="img/Collectibles/Dataminer_icon.webp" alt="Modding" width="100" height="100">
                             </a>
                         </div>
                         <p class="gallerytext"><a href="#">Modding(TODO)</a></p>
-                    </li>
-                </ul>
+                    </div>
+                </div>
             </section>
             <section>
                 <h2>ABOUT THE GAME</h2>
@@ -206,11 +213,13 @@
             </section>
         </main>
     </div>
-    <footer>
-        Made by: <br>
+    <footer class="footer">
+        <div class="container">
+            <span>Made by: <br>
         Maxim Kolodin <br>
         Alimzhan Zhaparov <br>
-        Askar Toraliyev
+        Askar Toraliyev</span>
+        </div>
     </footer>
 </body>
 </html>
