--- a/index.html
+++ b/index.html
@@ -258,6 +258,10 @@
                 <h2>Date and Time</h2>
                 <p id="dateTime" class="fs-4"></p>
             </section>
+            <section id="changeColorSection">
+                <h2>ChangeCollor</h2>
+                <button class="btn text-dark" id="colorButton">Change Color</button>
+            </section>
         </main>
     </div>
     <footer class="footer">
@@ -268,6 +272,7 @@
         Askar Toraliyev</span>
         </div>
     </footer>
+    <script src="./js/changeColor.js"></script>
     <script src="./js/modal.js"></script>
     <script src="./js/time.js"></script>
 </body>
