--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="./js/faq.js"></script>
     <script src="./js/gallery_generator.js"></script>
+
 </head>
 <body class="dark-theme">
     <div class="container">
         <div class="row justify-content-around">
-            <header class="logo col-11">
+            <header class="logo col-10">
                 <a href="index.html">
                     <img src="img/IsaacLogo.webp" alt="The Binding of Isaac:Rebirth Wiki">
                 </a>
                 <a href="index.html" class="logo_text">The Binding of Isaac:Rebirth Wiki</a>
             </header>
-            <a class="col-1" href="./register.html">register</a>
+            <div id="user-section" class="col-2"></div>
         </div>
         <main class="main_page">
             <h1>WELCOME TO THE BINDING OF ISAAC:REBIRTH WIKI</h1>
@@ -77,9 +78,13 @@
                 <h2>Date and Time</h2>
                 <p id="dateTime" class="fs-4"></p>
             </section>
+            <section id="changeColorSection">
+                <h2>ChangeColor</h2>
+                <button type="button" id="colorButton" class="btn btn-primary">Change Color</button>
+            </section>
             <section>
                 <h2>Light/Dark Theme Toggle</h2>
-                <button id="theme-toggle" class="btn btn-primary">Switch to Dark Theme</button>
+                <button type="button" id="theme-toggle" class="btn btn-primary">Switch to Dark Theme</button>
             </section>
         </main>
     </div>
@@ -95,5 +100,6 @@
     <script src="./js/modal.js"></script>
     <script src="./js/time.js"></script>
     <script src="./js/light_dark_scheme.js"></script>
+    <script src="./js/user.js"></script>
 </body>
 </html>
