--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/page.css">
     <script src="js/login.js"></script>
     <title>Log in</title>
+    <link rel="shortcut icon" type="image/png" href="favicon.ico">
 </head>
 <body>
     <div class="container">
