--- a/register.html
+++ b/register.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/page.css">
     <script src="js/register.js"></script>
     <title>Register</title>
+    <link rel="shortcut icon" type="image/png" href="favicon.ico">
 </head>
 <body>
     <div class="container">
