--- a/achievements.html
+++ b/achievements.html
@@ -51,7 +51,7 @@
 
             <section id="Rebirth">
                 <h2>Rebirth</h2>
-                <table>
+                <table id="table-1">
                     <thead>
                         <tr>
                             <th>Name</th>
@@ -92,7 +92,7 @@
             </section>
             <section id="Afterbirth">
                 <h2>Afterbirth</h2>
-                <table>
+                <table id="table-2">
                     <thead>
                         <tr>
                             <th>Name</th>
@@ -135,7 +135,7 @@
             </section>
             <section id="Afterbirth_plus">
                 <h2>Afterbirth+</h2>
-                <table>
+                <table id="table-3">
                     <thead>
                         <tr>
                             <th>Name</th>
@@ -176,7 +176,7 @@
             </section>
             <section id="Repentance">
                 <h2>Repentance</h2>
-                <table>
+                <table id="table-4">
                     <thead>
                         <tr>
                             <th>Name</th>
