fixed dark/light theme

--- a/endings.html
+++ b/endings.html
@@ -295,8 +295,10 @@
             <span>Made by: <br>
         Maxim Kolodin <br>
         Alimzhan Zhaparov <br>
-        Askar Toraliyev</span>
+        Askar Toraliyev</span> <br>
+        <span>This website supports <button type="button" id="theme-toggle" class="btn btn-link">Dark Theme</button></span>
         </div>
     </footer>
+    <script src="./js/light_dark_scheme.js"></script>
 </body>
 </html>
