--- a/index.html
+++ b/index.html
@@ -75,18 +75,6 @@
                     </div>
                 </div>
             </div>
-            <section>
-                <h2>Date and Time</h2>
-                <p id="dateTime" class="fs-4"></p>
-            </section>
-            <section id="changeColorSection">
-                <h2>ChangeColor</h2>
-                <button type="button" id="colorButton" class="btn btn-primary">Change Color</button>
-            </section>
-            <section>
-                <h2>Light/Dark Theme Toggle</h2>
-                <button type="button" id="theme-toggle" class="btn btn-primary">Switch to Dark Theme</button>
-            </section>
         </main>
     </div>
     <footer class="footer">
@@ -94,7 +82,8 @@
             <span>Made by: <br>
         Maxim Kolodin <br>
         Alimzhan Zhaparov <br>
-        Askar Toraliyev</span>
+        Askar Toraliyev</span> <br>
+        <span>This website supports <button type="button" id="theme-toggle" class="btn btn-link">Dark Theme</button></span>
         </div>
     </footer>
     <script src="./js/changeColor.js"></script>
