--- a/login.html
+++ b/login.html
@@ -30,10 +30,12 @@
     <footer class="footer">
         <div class="container">
             <span>Made by: <br>
-            Maxim Kolodin <br>
-            Alimzhan Zhaparov <br>
-            Askar Toraliyev</span>
+        Maxim Kolodin <br>
+        Alimzhan Zhaparov <br>
+        Askar Toraliyev</span> <br>
+        <span>This website supports <button type="button" id="theme-toggle" class="btn btn-link">Dark Theme</button></span>
         </div>
     </footer>
+    <script src="./js/light_dark_scheme.js"></script>
 </body>
 </html>
