--- a/register.html
+++ b/register.html
@@ -18,6 +18,8 @@
             <a href="index.html" class="logo_text">The Binding of Isaac:Rebirth Wiki</a>
         </header>
         <main class="main_page">
+                <span>Name:</span> <br>
+                <input class="text-black" type="text" name="name" id="name" required> <br>
                 <span>Email:</span> <br>
                 <input class="text-black" type="email" name="email" id="email" required> <br>
                 <span>Password: </span> <br>
